# MolecularBox

./: .gitmodules  CMakeLists.txt  Description.md  Dockerfile  README.md  add_hpp.sh  build.sh  clear.sh  count_lines.sh  execute.sh  line_counter.sh  recompile.sh  requirements_ubuntu.sh  run_tests.sh
.github/workflows/: Build.yml
documentation/: ChangeLog.md  Description.md  RoadMap.md
include/: AddDrawSubscription.hpp  CheckCollision.hpp  CoordinateSystem.hpp  Coordinates.hpp  DrawObject.hpp  DrawningInteraction.hpp  ForMolecularBox.hpp  GetGraphic.hpp  GraphicAdapter.hpp  GraphicInterface.hpp  IdStorage.hpp  Interaction.hpp  InteractionStorage.hpp  MolecularBox.hpp  Object.hpp  ObjectCoordinates.hpp  ObjectStorage.hpp  ProcessCollision.hpp  SDL2GraphicAdapter.hpp  SDL2GraphicFunctions.hpp  SDL2GraphicImplementation.hpp  SDL2TimerFunctions.hpp  SDL2TimerImplementation.hpp  Shape.hpp  StepByStepSimulation.hpp  TimerInterface.hpp  UsingAlias.hpp  UsingAliasMolecularBox.hpp  UsingAliasTimer.hpp  VectorCoordinateOperations.hpp
include/GraphicAdapter/: GraphicInterface.hpp  SDL2GraphicFunctions.hpp  SDL2GraphicImplementation.hpp  UsingAliasGraphic.hpp
include/Interaction/: InteractionInterface.hpp
include/TimerAdapter/: SDL2TimerFunctions.hpp  SDL2TimerImplementation.hpp  TimerInterface.hpp
src/: AddDrawSubscription.cpp  CMakeLists.txt  CheckCollision.cpp  Coordinates.cpp  DrawningInteraction.cpp  GetGraphic.cpp  Interaction.cpp  InteractionStorage.cpp  MolecularBox.cpp  MolecularBox.out  Object.cpp  ObjectCoordinates.cpp  ObjectStorage.cpp  ProcessCollision.cpp  SDL2GraphicAdapter.cpp  SDL2GraphicFunctions.cpp  SDL2GraphicImplementation.cpp  SDL2TimerFunctions.cpp  SDL2TimerImplementation.cpp  Shape.cpp  StepByStepSimulation.cpp
src/GraphicAdapter/: CMakeLists.txt  SDL2GraphicFunctions.cpp  SDL2GraphicImplementation.cpp
src/TimerAdapter/: CMakeLists.txt  SDL2TimerFunctions.cpp  SDL2TimerImplementation.cpp
tests/: CMakeLists.txt  CheckCollisionTests.cpp  CoordinatesTests.cpp  ProcessCollisionTests.cpp
