add_subdirectory(GraphicAdapter)
add_subdirectory(TimerAdapter)

add_library(Shape                STATIC Shape.cpp)
add_library(Interaction          STATIC Interaction.cpp)
add_library(ObjectStorage        STATIC ObjectStorage.cpp)
add_library(InteractionStorage   STATIC InteractionStorage.cpp)
add_library(DrawningInteraction  STATIC DrawningInteraction.cpp)
add_library(CheckCollision       STATIC CheckCollision.cpp)
add_library(ProcessCollision     STATIC ProcessCollision.cpp)
add_library(StepByStepSimulation STATIC StepByStepSimulation.cpp)

add_executable(MolecularBox MolecularBox.cpp)
target_link_libraries(MolecularBox SDL2GraphicFunctions SDL2GraphicImplementation)
target_link_libraries(MolecularBox SDL2TimerFunctions SDL2TimerImplementation)
target_link_libraries(MolecularBox Shape Interaction ObjectStorage InteractionStorage)
target_link_libraries(MolecularBox DrawningInteraction)
target_link_libraries(MolecularBox CheckCollision)
target_link_libraries(MolecularBox ProcessCollision)
target_link_libraries(MolecularBox StepByStepSimulation)